# Functor

./: CMakeLists.txt  README.md
src/: main.cpp
src/utils/: CMakeLists.txt  power.cpp  power.hpp
